--- a/src/pages/SideMenu/SideMenu.css
+++ b/src/pages/SideMenu/SideMenu.css
@@ -19,9 +19,10 @@
     margin-bottom: 20px;
     color: gray
 }
+
 .brdrbt {
     border-bottom: 1px solid;
-    padding-bottom: 20px ;
+    padding-bottom: 20px;
 }
 
 .list {
@@ -34,6 +35,38 @@
     gap: 8px;
 }
 
-.list>li{
+.list>li {
     color: gray;
+    
 }
+.tooltip {
+    display: inline;
+    position: relative;
+}
+
+.tooltip:hover:after {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-justify-content: center;
+    justify-content: center;
+    background: #444;
+    border-radius: 8px;
+    color: #fff;
+    content: attr(title);
+    font-size: 16px;
+    padding: 13px;
+    width: 70px;
+    margin: -40px auto 0;
+   }
+
+.tooltip:hover::before {
+    border: solid;
+    border-color: #444 transparent;
+    border-width: 12px 6px 0 6px;
+    content: "";
+        bottom: 30px;
+    position: absolute;
+    
+   
+}
+
