--- a/src/pages/Listagem/Listagem.css
+++ b/src/pages/Listagem/Listagem.css
@@ -1,6 +1,6 @@
 .menufiltro {
     padding-top: 53px;
-    margin-left: 75px;
+    margin-left: 18px;
 }
 
 .trconfig {
@@ -8,7 +8,7 @@
     margin-top: 10px;
     color: gray;
     width: 100%;
-    margin-left: 54px;
+    margin-left: 56px;
 
 }
 
@@ -58,7 +58,7 @@
     flex: 1.2 !important;
 }
 .col6 {
-    flex: 1.2 !important;
+    flex: 1.3 !important;
 }
 .col7 {
     flex: 1.2 !important;
@@ -81,3 +81,21 @@
     
 }
 
+.progress {
+    margin:20px 0;
+    padding:0;
+    width:90%;
+    height:5px;
+    overflow:hidden;
+    background:#e5e5e5;
+    border-radius:6px;
+  }
+  
+  .bar {
+      position:relative;
+    float:left;
+    min-width:1%;
+    height:100%;
+    background:rgb(41, 216, 41);
+  }
+  
