--- a/src/pages/SideMenu/SideMenu.css
+++ b/src/pages/SideMenu/SideMenu.css
@@ -17,7 +17,8 @@
     height: 30px;
     float: left;
     margin-bottom: 20px;
-    color: gray
+    color: gray;
+        
 }
 
 .brdrbt {
@@ -35,38 +36,47 @@
     gap: 8px;
 }
 
+
 .list>li {
     color: gray;
-    
+
 }
+
+
+.sdhover:hover {
+    color: rgb(67, 67, 214)!important;
+    background-color: #98c3ed;
+}
+.sideactv:active {
+    color: rgb(67, 67, 214);
+    background-color: #98c3ed;
+}
+
 .tooltip {
     display: inline;
     position: relative;
+    font-weight: 280;
 }
 
 .tooltip:hover:after {
-    display: -webkit-flex;
-    display: flex;
-    -webkit-justify-content: center;
+    display: block;
     justify-content: center;
-    background: #444;
-    border-radius: 8px;
+    background: #3d454acf;
+    border-radius: 15px;
     color: #fff;
     content: attr(title);
-    font-size: 16px;
-    padding: 13px;
+    font-size: 15px;
+    padding: 10px;
     width: 70px;
-    margin: -40px auto 0;
-   }
+    margin: -3px auto 0 50px;
+}
 
 .tooltip:hover::before {
-    border: solid;
     border-color: #444 transparent;
     border-width: 12px 6px 0 6px;
     content: "";
-        bottom: 30px;
+    bottom: 30px;
     position: absolute;
-    
-   
-}
 
+
+}
